# bzltool

./: .bazelrc  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  bazel-bin  bazel-main  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
.github/workflows/: build-test.yml
ai/: spec.md
cmd/: BUILD.bazel  health.go  init.go  root.go
integration/: BUILD.bazel  integration_test.go
internal/config/: BUILD.bazel  config.go
internal/git/: BUILD.bazel  git.go
internal/template/: BUILD.bazel  template.go  template_test.go
internal/tui/: BUILD.bazel  tui.go
