load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "health.go",
        "init.go",
        "root.go",
    ],
    importpath = "github.com/filmil/bzltool/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/git",
        "//internal/template",
        "//internal/tui",
        "@com_github_spf13_cobra//:cobra",
    ],
)
