load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "template",
    srcs = ["template.go"],
    importpath = "github.com/filmil/bzltool/internal/template",
    visibility = ["//:__subpackages__"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "template_test",
    srcs = ["template_test.go"],
    deps = [":template"],
)
